{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 350,
  "lineage": "3847de77-2454-19e8-fadf-80602cd0fd39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "edo_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0472a07f871f6c46d",
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:elastic-ip/eipalloc-0472a07f871f6c46d",
            "domain": "vpc",
            "id": "eipalloc-0472a07f871f6c46d",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-192-173-199.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.192.173.199",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-nat-eip01"
            },
            "tags_all": {
              "Name": "edo-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edo_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cce67a5893f85f9",
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:instance/i-0f7552bf12cfef1a0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "edo-instance-profile01",
            "id": "i-0f7552bf12cfef1a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e9440f7df06e0b09"
              }
            ],
            "primary_network_interface_id": "eni-0e9440f7df06e0b09",
            "private_dns": "ip-10-81-101-175.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.81.101.175",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0518b544f9fed7830",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055bfccb765308218",
            "tags": {
              "Name": "edo-ec201-private"
            },
            "tags_all": {
              "Name": "edo-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec856f3d27b30ab2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-0f7552bf12cfef1a0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.edo_instance_profile01",
            "aws_iam_role.edo_ec2_role01",
            "aws_security_group.edo_ec2_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edo_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:internet-gateway/igw-04bbcd20e65941494",
            "id": "igw-04bbcd20e65941494",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-igw01"
            },
            "tags_all": {
              "Name": "edo-igw01"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "edo_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "edo-alb-logs-lh-891377135193",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/742de31852fb2987",
            "arn_suffix": "app/edo-alb01/742de31852fb2987",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "edo-alb01-1327469.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/742de31852fb2987",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "edo-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-05244d3959f55f83e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049aaab1e76441a17"
              },
              {
                "subnet_id": "subnet-0e1e23026eed2fbcd"
              },
              {
                "subnet_id": "subnet-0f4f959be3feb177f"
              }
            ],
            "subnets": [
              "subnet-049aaab1e76441a17",
              "subnet-0e1e23026eed2fbcd",
              "subnet-0f4f959be3feb177f"
            ],
            "tags": {
              "Name": "edo-alb01"
            },
            "tags_all": {
              "Name": "edo-alb01"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/742de31852fb2987"
          },
          "dependencies": [
            "aws_s3_bucket.edo_alb_logs_bucket01",
            "aws_security_group.edo_alb_sg01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "edo_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:listener/app/edo-alb01/742de31852fb2987/804ccc566f98365f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:listener/app/edo-alb01/742de31852fb2987/804ccc566f98365f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/742de31852fb2987",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:listener/app/edo-alb01/742de31852fb2987/804ccc566f98365f"
          },
          "dependencies": [
            "aws_lb.edo_alb01",
            "aws_s3_bucket.edo_alb_logs_bucket01",
            "aws_security_group.edo_alb_sg01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "edo_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/a95afc2e0aa9d734",
            "arn_suffix": "targetgroup/edo-tg01/a95afc2e0aa9d734",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/a95afc2e0aa9d734",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edo-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "edo-tg01"
            },
            "tags_all": {
              "Name": "edo-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/a95afc2e0aa9d734"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "edo_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/a95afc2e0aa9d734-2026012700395621410000000b",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/a95afc2e0aa9d734",
            "target_id": "i-0f7552bf12cfef1a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.edo_instance_profile01",
            "aws_iam_role.edo_ec2_role01",
            "aws_instance.edo_ec201_private_bonus",
            "aws_lb_target_group.edo_tg01",
            "aws_security_group.edo_ec2_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "edo_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0472a07f871f6c46d",
            "association_id": "eipassoc-0329841d559ce6b2e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06663a087f3c8edbc",
            "network_interface_id": "eni-01559925a337c40b2",
            "private_ip": "10.81.1.117",
            "public_ip": "52.192.173.199",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e1e23026eed2fbcd",
            "tags": {
              "Name": "edo-nat01"
            },
            "tags_all": {
              "Name": "edo-nat01"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.edo_nat_eip01",
            "aws_internet_gateway.edo_igw01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "edo_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057de691c7c92a4ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06663a087f3c8edbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-057de691c7c92a4ea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-057de691c7c92a4ea"
          },
          "dependencies": [
            "aws_eip.edo_nat_eip01",
            "aws_internet_gateway.edo_igw01",
            "aws_nat_gateway.edo_nat01",
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "edo_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04bbcd20e65941494",
            "id": "r-rtb-0411109b3301099251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0411109b330109925",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0411109b330109925"
          },
          "dependencies": [
            "aws_internet_gateway.edo_igw01",
            "aws_route_table.edo_public_rt01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edo_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:route-table/rtb-057de691c7c92a4ea",
            "id": "rtb-057de691c7c92a4ea",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "edo-private-rt01"
            },
            "tags_all": {
              "Name": "edo-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-057de691c7c92a4ea",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edo_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:route-table/rtb-0411109b330109925",
            "id": "rtb-0411109b330109925",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "edo-public-rt01"
            },
            "tags_all": {
              "Name": "edo-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-0411109b330109925",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edo_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f045bae0667451ff",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-057de691c7c92a4ea",
            "subnet_id": "subnet-055bfccb765308218"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc3326726e99128f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-057de691c7c92a4ea",
            "subnet_id": "subnet-0b2f7bd00666dd221"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c754d68538147a6",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-057de691c7c92a4ea",
            "subnet_id": "subnet-07a6d3b9c082c43a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edo_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b5912360ead9cc1",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0411109b330109925",
            "subnet_id": "subnet-0e1e23026eed2fbcd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_public_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084aa3521f8019aa7",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0411109b330109925",
            "subnet_id": "subnet-049aaab1e76441a17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_public_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4dd7195a0f4d8a6",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0411109b330109925",
            "subnet_id": "subnet-0f4f959be3feb177f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_public_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-05244d3959f55f83e",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05244d3959f55f83e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-58a04531"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "edo-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-alb-sg01"
            },
            "tags_all": {
              "Name": "edo-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-05244d3959f55f83e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-0ec856f3d27b30ab2",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec856f3d27b30ab2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05244d3959f55f83e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "edo-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-ec2-sg01"
            },
            "tags_all": {
              "Name": "edo-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0ec856f3d27b30ab2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-0d956db1a6f808b8a",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d956db1a6f808b8a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access only from app tier EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ec856f3d27b30ab2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "edo-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-rds-sg01"
            },
            "tags_all": {
              "Name": "edo-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0d956db1a6f808b8a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-0a04720ec6313b1f3",
            "description": "SG for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a04720ec6313b1f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EC2 SG access only for 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ec856f3d27b30ab2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "edo-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-vpce-sg01"
            },
            "tags_all": {
              "Name": "edo-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0a04720ec6313b1f3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edo_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-055bfccb765308218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.81.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055bfccb765308218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-private-subnet01"
            },
            "tags_all": {
              "Name": "edo-private-subnet01"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-055bfccb765308218",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-0b2f7bd00666dd221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.81.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2f7bd00666dd221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-private-subnet02"
            },
            "tags_all": {
              "Name": "edo-private-subnet02"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0b2f7bd00666dd221",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-07a6d3b9c082c43a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.81.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a6d3b9c082c43a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-private-subnet03"
            },
            "tags_all": {
              "Name": "edo-private-subnet03"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-07a6d3b9c082c43a9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edo_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-0e1e23026eed2fbcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.81.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e23026eed2fbcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-public-subnet01"
            },
            "tags_all": {
              "Name": "edo-public-subnet01"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0e1e23026eed2fbcd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-049aaab1e76441a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.81.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049aaab1e76441a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-public-subnet02"
            },
            "tags_all": {
              "Name": "edo-public-subnet02"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-049aaab1e76441a17",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-0f4f959be3feb177f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.81.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f959be3feb177f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-public-subnet03"
            },
            "tags_all": {
              "Name": "edo-public-subnet03"
            },
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0f4f959be3feb177f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edo_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc/vpc-0c2b1b6e950e6039a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-06c59fb467bc50327",
            "default_route_table_id": "rtb-03fc838d75b50c834",
            "default_security_group_id": "sg-0bb3d6259433df68a",
            "dhcp_options_id": "dopt-06001cad9a135c512",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2b1b6e950e6039a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fc838d75b50c834",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-vpc01"
            },
            "tags_all": {
              "Name": "edo-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-0c2b1b6e950e6039a",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-06906a615202db0a9",
            "dns_entry": [
              {
                "dns_name": "vpce-06906a615202db0a9-iwpfxkz6.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06906a615202db0a9-iwpfxkz6-ap-northeast-1d.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06906a615202db0a9-iwpfxkz6-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06906a615202db0a9-iwpfxkz6-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0787746CUZAZMK3Q5RC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06906a615202db0a9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00884d0d578bb55d4",
              "eni-0512fb1c7a23e20b0",
              "eni-06035bcd6dfc213a6"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a04720ec6313b1f3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.236",
                "subnet_id": "subnet-055bfccb765308218"
              },
              {
                "ipv4": "10.81.102.50",
                "subnet_id": "subnet-0b2f7bd00666dd221"
              },
              {
                "ipv4": "10.81.103.219",
                "subnet_id": "subnet-07a6d3b9c082c43a9"
              }
            ],
            "subnet_ids": [
              "subnet-055bfccb765308218",
              "subnet-07a6d3b9c082c43a9",
              "subnet-0b2f7bd00666dd221"
            ],
            "tags": {
              "Name": "edo-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "edo-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-06906a615202db0a9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0ebc7690600d518a8",
            "dns_entry": [
              {
                "dns_name": "vpce-0ebc7690600d518a8-905bftz3.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ebc7690600d518a8-905bftz3-ap-northeast-1d.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ebc7690600d518a8-905bftz3-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ebc7690600d518a8-905bftz3-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z078777233N32Z9BAO27N"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z07877471MTXVBJ8N2PKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ebc7690600d518a8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06672b80ebd4d7f4e",
              "eni-0917f39a466ffdd63",
              "eni-0a6621be851394317"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a04720ec6313b1f3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.179",
                "subnet_id": "subnet-055bfccb765308218"
              },
              {
                "ipv4": "10.81.102.92",
                "subnet_id": "subnet-0b2f7bd00666dd221"
              },
              {
                "ipv4": "10.81.103.192",
                "subnet_id": "subnet-07a6d3b9c082c43a9"
              }
            ],
            "subnet_ids": [
              "subnet-055bfccb765308218",
              "subnet-07a6d3b9c082c43a9",
              "subnet-0b2f7bd00666dd221"
            ],
            "tags": {
              "Name": "edo-vpce-kms01"
            },
            "tags_all": {
              "Name": "edo-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0ebc7690600d518a8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0a717ed7c853a5bba",
            "dns_entry": [
              {
                "dns_name": "vpce-0a717ed7c853a5bba-tqbp4lkf.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a717ed7c853a5bba-tqbp4lkf-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a717ed7c853a5bba-tqbp4lkf-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a717ed7c853a5bba-tqbp4lkf-ap-northeast-1d.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08378411O0JO4ZTYPLWZ"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0839651154KO7HK6C9B2"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08378042WNYWF5YG0NTF"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z08364561E2N2UVTRJAND"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a717ed7c853a5bba",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001b3258419abe8f6",
              "eni-038578d54454a0cf1",
              "eni-0855037519d68c28f"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a04720ec6313b1f3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.231",
                "subnet_id": "subnet-055bfccb765308218"
              },
              {
                "ipv4": "10.81.102.207",
                "subnet_id": "subnet-0b2f7bd00666dd221"
              },
              {
                "ipv4": "10.81.103.42",
                "subnet_id": "subnet-07a6d3b9c082c43a9"
              }
            ],
            "subnet_ids": [
              "subnet-055bfccb765308218",
              "subnet-07a6d3b9c082c43a9",
              "subnet-0b2f7bd00666dd221"
            ],
            "tags": {
              "Name": "edo-vpce-logs01"
            },
            "tags_all": {
              "Name": "edo-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0a717ed7c853a5bba",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0f7b5ef2fc56240f6",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f7b5ef2fc56240f6",
            "ip_address_type": "ipv4",
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-057de691c7c92a4ea"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "edo-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "edo-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0f7b5ef2fc56240f6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0d73fb18f4a700c31",
            "dns_entry": [
              {
                "dns_name": "vpce-0d73fb18f4a700c31-49m0jxm9.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d73fb18f4a700c31-49m0jxm9-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d73fb18f4a700c31-49m0jxm9-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d73fb18f4a700c31-49m0jxm9-ap-northeast-1d.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0843725RB6T979ZL7TF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d73fb18f4a700c31",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-045113f46ec204351",
              "eni-059b98ffae6efb404",
              "eni-0bd7886c4b940d287"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a04720ec6313b1f3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.49",
                "subnet_id": "subnet-055bfccb765308218"
              },
              {
                "ipv4": "10.81.102.223",
                "subnet_id": "subnet-0b2f7bd00666dd221"
              },
              {
                "ipv4": "10.81.103.132",
                "subnet_id": "subnet-07a6d3b9c082c43a9"
              }
            ],
            "subnet_ids": [
              "subnet-055bfccb765308218",
              "subnet-07a6d3b9c082c43a9",
              "subnet-0b2f7bd00666dd221"
            ],
            "tags": {
              "Name": "edo-vpce-secrets01"
            },
            "tags_all": {
              "Name": "edo-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0d73fb18f4a700c31",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0a787931c5839fa67",
            "dns_entry": [
              {
                "dns_name": "vpce-0a787931c5839fa67-rp2wsqba.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a787931c5839fa67-rp2wsqba-ap-northeast-1d.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a787931c5839fa67-rp2wsqba-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a787931c5839fa67-rp2wsqba-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0787774XH59SU04KBIO"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z07877683JJHVLP9E5RGE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a787931c5839fa67",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05c4abbb8ae9ec1cc",
              "eni-085ab1c8f05767bfc",
              "eni-0cd67c63b1b754b30"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a04720ec6313b1f3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.184",
                "subnet_id": "subnet-055bfccb765308218"
              },
              {
                "ipv4": "10.81.102.101",
                "subnet_id": "subnet-0b2f7bd00666dd221"
              },
              {
                "ipv4": "10.81.103.47",
                "subnet_id": "subnet-07a6d3b9c082c43a9"
              }
            ],
            "subnet_ids": [
              "subnet-055bfccb765308218",
              "subnet-07a6d3b9c082c43a9",
              "subnet-0b2f7bd00666dd221"
            ],
            "tags": {
              "Name": "edo-vpce-ssm01"
            },
            "tags_all": {
              "Name": "edo-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0a787931c5839fa67",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0d3b9e7310ac172fd",
            "dns_entry": [
              {
                "dns_name": "vpce-0d3b9e7310ac172fd-itjznluk.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3b9e7310ac172fd-itjznluk-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3b9e7310ac172fd-itjznluk-ap-northeast-1d.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d3b9e7310ac172fd-itjznluk-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08380443MG0ZNEJ6GBO8"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z084301111BPVDWS1NKQL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d3b9e7310ac172fd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-066fe0dae1d3c473f",
              "eni-08801ededbac91f8e",
              "eni-0ed17bb9f5c43ed5a"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a04720ec6313b1f3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.146",
                "subnet_id": "subnet-055bfccb765308218"
              },
              {
                "ipv4": "10.81.102.100",
                "subnet_id": "subnet-0b2f7bd00666dd221"
              },
              {
                "ipv4": "10.81.103.128",
                "subnet_id": "subnet-07a6d3b9c082c43a9"
              }
            ],
            "subnet_ids": [
              "subnet-055bfccb765308218",
              "subnet-07a6d3b9c082c43a9",
              "subnet-0b2f7bd00666dd221"
            ],
            "tags": {
              "Name": "edo-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "edo-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c2b1b6e950e6039a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0d3b9e7310ac172fd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0635a981ee1499ca3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0635a981ee1499ca3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ec856f3d27b30ab2",
            "security_group_rule_id": "sgr-0635a981ee1499ca3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0635a981ee1499ca3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_ec2_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "edo_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0119543dd5048e115",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0119543dd5048e115",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-05244d3959f55f83e",
            "security_group_rule_id": "sgr-0119543dd5048e115",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0119543dd5048e115",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-013077a1c94825a94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-013077a1c94825a94",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0d956db1a6f808b8a",
            "security_group_rule_id": "sgr-013077a1c94825a94",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-013077a1c94825a94",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_rds_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0ad7f27c69a061ce2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0ad7f27c69a061ce2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a04720ec6313b1f3",
            "security_group_rule_id": "sgr-0ad7f27c69a061ce2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0ad7f27c69a061ce2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-019a099c5bbb7e7d7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-019a099c5bbb7e7d7",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-58a04531",
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-05244d3959f55f83e",
            "security_group_rule_id": "sgr-019a099c5bbb7e7d7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-019a099c5bbb7e7d7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_vpc.edo_vpc01",
            "data.aws_ec2_managed_prefix_list.edo_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-02f2474d8cb26f0f9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02f2474d8cb26f0f9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-05244d3959f55f83e",
            "security_group_rule_id": "sgr-02f2474d8cb26f0f9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-02f2474d8cb26f0f9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0834dd3421b19dbb1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0834dd3421b19dbb1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05244d3959f55f83e",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ec856f3d27b30ab2",
            "security_group_rule_id": "sgr-0834dd3421b19dbb1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0834dd3421b19dbb1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_security_group.edo_ec2_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0653195aa38bfd4e0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-0653195aa38bfd4e0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ec856f3d27b30ab2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0d956db1a6f808b8a",
            "security_group_rule_id": "sgr-0653195aa38bfd4e0",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0653195aa38bfd4e0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_ec2_sg01",
            "aws_security_group.edo_rds_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-015be386742aecfbf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-015be386742aecfbf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ec856f3d27b30ab2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a04720ec6313b1f3",
            "security_group_rule_id": "sgr-015be386742aecfbf",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-015be386742aecfbf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_ec2_sg01",
            "aws_security_group.edo_vpce_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    }
  ]
}